# quantum-computing-exam

./: README.md
BF/: README.md  bf.py
GA/: GAexam.py  README.md  env.py  gene.py  pyproject.toml
PSO/: HilbertCurve.py  Particle.py  README.md  pso.py  pyproject.toml
QUBO/: README.md  exam.py
QUBO/QUBO/: QUBOsolver.py  local.py
exams/: exam100.py  exam125.py  exam150.py  exam175.py  exam20.py  exam200.py  exam225.py  exam250.py  exam275.py  exam30.py  exam300.py  exam40.py  exam400.py  exam50.py  exam500.py  exam60.py  exam600.py  exam70.py  exam700.py  exam80.py  exam_generator.py  exams.py  test.py
exams/exams100/: exam1.py  exam10.py  exam11.py  exam12.py  exam13.py  exam14.py  exam15.py  exam16.py  exam17.py  exam18.py  exam19.py  exam2.py  exam20.py  exam3.py  exam4.py  exam5.py  exam6.py  exam7.py  exam8.py  exam9.py
exams/exams125/: exam1.py  exam10.py  exam11.py  exam12.py  exam13.py  exam14.py  exam15.py  exam16.py  exam17.py  exam18.py  exam19.py  exam2.py  exam20.py  exam3.py  exam4.py  exam5.py  exam6.py  exam7.py  exam8.py  exam9.py
exams/exams150/: exam1.py  exam10.py  exam11.py  exam12.py  exam13.py  exam14.py  exam15.py  exam16.py  exam17.py  exam18.py  exam19.py  exam2.py  exam20.py  exam3.py  exam4.py  exam5.py  exam6.py  exam7.py  exam8.py  exam9.py
exams/exams175/: exam1.py  exam10.py  exam11.py  exam12.py  exam13.py  exam14.py  exam15.py  exam16.py  exam17.py  exam18.py  exam19.py  exam2.py  exam20.py  exam3.py  exam4.py  exam5.py  exam6.py  exam7.py  exam8.py  exam9.py
exams/exams20/: exam1.py  exam10.py  exam11.py  exam12.py  (+16 more)
(+180 files in other folders)
