[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = ["lolo818 <g36029757@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ttictoc = "^0.5.6"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
