[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = ["lolo818 <g36029757@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.4"
pyqubo = "^1.4.0"
ttictoc = "^0.5.6"
matplotlib = "^3.8.4"
requests = "^2.31.0"
jsonpickle = "^3.0.4"
python-socketio = {extras = ["client"], version = "^5.11.3"}

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
black = "^24.4.0"

[build-system]
package-mode = false
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
